<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:background="@drawable/bg_dialog"
  android:minWidth="300dp">

  <TextView
    android:id="@+id/tvTitle"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="@dimen/fab_margin"
    android:text="@string/label_arriving"
    android:textColor="@color/colorOnPrimary"
    android:textSize="@dimen/text_size_20"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/tvMessage"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="@dimen/fab_margin"
    android:text="@string/message_next_stop"
    android:textColor="@color/colorOnPrimary"
    app:layout_constraintBottom_toTopOf="@id/ivIllustration"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tvTitle" />

  <ImageView
    android:id="@+id/ivIllustration"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginBottom="@dimen/fab_margin"
    android:padding="@dimen/margin_xx_large"
    android:src="@drawable/ic_tranport_arriving"
    app:layout_constraintBottom_toBottomOf="@id/btnClose"
    app:layout_constraintDimensionRatio="2:1"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tvMessage" />

  <com.google.android.material.button.MaterialButton
    android:id="@+id/btnClose"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/fab_margin"
    android:layout_marginBottom="@dimen/fab_margin"
    android:text="@string/label_ok"
    android:textColor="@color/colorOnPrimaryUntranslated"
    android:textStyle="bold"
    app:backgroundTint="@color/color_accent_500"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/ivIllustration" />
</androidx.constraintlayout.widget.ConstraintLayout>
