<?xml version="1.0" encoding="utf-8"?><!--suppress AndroidUnknownAttribute -->
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/clRoot"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/colorPrimary">

  <com.google.android.material.appbar.AppBarLayout
    android:id="@+id/appBar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stateListAnimator="@drawable/appbar_elevation"
    android:theme="@style/AppTheme.AppBarOverlay">

    <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:background="?attr/colorPrimary"
      app:popupTheme="@style/AppTheme.PopupOverlay">

      <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true">

        <FrameLayout
          android:id="@+id/flTitle"
          android:layout_width="match_parent"
          android:layout_height="match_parent">

          <TextView
            style="@style/ToolbarTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/fab_margin"
            android:text="@string/label_select_stop" />

          <ImageView
            android:id="@+id/ivSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/title_search"
            android:padding="@dimen/fab_margin"
            android:src="@drawable/ic_search_splash" />
        </FrameLayout>

        <EditText
          android:id="@+id/etSearch"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:layout_gravity="center_vertical"
          android:layout_marginVertical="@dimen/margin_2"
          android:autofillHints="@string/hint_search"
          android:background="@drawable/bg_search_box"
          android:cursorVisible="true"
          android:descendantFocusability="blocksDescendants"
          android:focusable="true"
          android:hint="@string/hint_search"
          android:imeOptions="actionDone"
          android:inputType="text"
          android:lines="1"
          android:maxLines="1"
          android:paddingStart="@dimen/margin_small"
          tools:ignore="RtlSymmetry" />
      </FrameLayout>
    </androidx.appcompat.widget.Toolbar>
  </com.google.android.material.appbar.AppBarLayout>

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/rvStops"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical"
    android:overScrollMode="never"
    android:paddingHorizontal="@dimen/margin_tablet"
    android:paddingTop="@dimen/fab_margin"
    android:paddingBottom="@dimen/route_list_bottom_padding"
    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
    tools:listitem="@layout/item_spinner" />

  <TextView
    android:id="@+id/tvNoStops"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/fab_margin"
    android:gravity="center"
    android:text="@string/label_no_stops"
    app:drawableTopCompat="@drawable/il_bus_stop" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
