<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".presentation.history.HistoryFragment">

  <TextView
    android:id="@+id/tvNoHistory"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:text="@string/message_no_history"
    app:drawableTopCompat="@drawable/il_no_data" />

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/rvHistory"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical"
    android:overScrollMode="never"
    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
    tools:listitem="@layout/item_history" />

  <com.google.android.material.button.MaterialButton
    android:id="@+id/fabClear"
    style="@style/FloatingActionButton.Regular"
    android:layout_width="@dimen/fab_size"
    android:layout_height="@dimen/button_size"
    android:layout_gravity="bottom|end"
    android:layout_margin="@dimen/fab_margin"
    android:contentDescription="@string/action_clear_history"
    android:visibility="gone"
    app:icon="@drawable/ic_delete" />

  <com.google.android.material.appbar.AppBarLayout
    android:id="@+id/appBar"
    style="@style/Background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stateListAnimator="@drawable/appbar_elevation"
    android:theme="@style/AppTheme.AppBarOverlay">

    <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      app:popupTheme="@style/AppTheme.PopupOverlay">

      <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
          style="@style/Text.Toolbar"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginEnd="@dimen/fab_margin"
          android:text="@string/title_history" />
      </FrameLayout>
    </androidx.appcompat.widget.Toolbar>
  </com.google.android.material.appbar.AppBarLayout>

  <ProgressBar
    android:id="@+id/progressLoading"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
