<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  style="@style/CardView.Regular"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_margin="@dimen/margin_small">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/clHistory"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

    <TextView
      android:id="@+id/tvLabelFrom"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:padding="@dimen/fab_margin"
      android:text="@string/label_from"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintWidth_percent="0.3" />

    <TextView
      android:id="@+id/tvFrom"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:padding="@dimen/fab_margin"
      android:textStyle="bold"
      app:layout_constraintEnd_toStartOf="@id/ivOptions"
      app:layout_constraintStart_toEndOf="@id/tvLabelFrom"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintWidth_percent="0.6" />

    <TextView
      android:id="@+id/tvLabelTo"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:padding="@dimen/fab_margin"
      android:text="@string/label_to"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tvFrom"
      app:layout_constraintWidth_percent="0.3" />

    <TextView
      android:id="@+id/tvTo"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:padding="@dimen/fab_margin"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@id/tvLabelTo"
      app:layout_constraintTop_toTopOf="@id/tvLabelTo"
      app:layout_constraintWidth_percent="0.7" />

    <ImageView
      android:id="@+id/ivOptions"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:background="?selectableItemBackgroundBorderless"
      android:clickable="true"
      android:contentDescription="@string/cd_options"
      android:focusable="true"
      android:paddingVertical="@dimen/margin_small"
      android:src="@drawable/ic_more_vertical"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintWidth_percent="0.1" />

    <TextView
      android:id="@+id/tvDate"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:paddingHorizontal="@dimen/fab_margin"
      android:paddingVertical="@dimen/margin_small"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tvTo" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
